fix player spacing

--- a/static-prototype/assets/sass/util/_util.sass
+++ b/static-prototype/assets/sass/util/_util.sass
@@ -89,6 +89,9 @@
 .mt-3
   margin-top: 3rem
 
+.mt-5
+  margin-top: 5rem
+
 .mt-10
   margin-top: 10rem
 
